Close #312 - Remove Lexer from public API

--- a/xFunc/Resources/Resource.resx
+++ b/xFunc/Resources/Resource.resx
@@ -167,7 +167,7 @@
     <value>The value '{1}' was assigned to the variable '{0}'.</value>
   </data>
   <data name="Author" xml:space="preserve">
-    <value>Dmitry Kischenko</value>
+    <value>Dmytro Kyshchenko</value>
   </data>
   <data name="AuthorTextBox" xml:space="preserve">
     <value>Author:</value>
