--- a/xFunc.Maths/Resources/Resource.resx
+++ b/xFunc.Maths/Resources/Resource.resx
@@ -214,4 +214,10 @@
   <data name="StringTokenizeException" xml:space="preserve">
     <value>Cannot find the end of string expression.</value>
   </data>
+  <data name="UnitIsNotSupportedException" xml:space="preserve">
+    <value>The '{0}' unit is not supported.</value>
+  </data>
+  <data name="ValueIsNotSupportedException" xml:space="preserve">
+    <value>The '{0} ({1})' conversion value is not supported.</value>
+  </data>
 </root>
